Расширить редакторы классов и датасетов
